--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,4 @@
 @import "./scss/utility-bar.scss";
 @import "./scss/title.scss";
 @import "./scss/play-button.scss";
-@import "./scss/previews.scss";
+@import "./scss/preview.scss";
