- Working on FloorHotspot

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import "./scss/title.scss";
 @import "./scss/play-button.scss";
 @import "./scss/preview.scss";
+@import "./scss/context-menu.scss";
