- Working on IconBrowser

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,4 @@
 @import "./scss/play-button.scss";
 @import "./scss/preview.scss";
 @import "./scss/context-menu.scss";
+@import "./scss/config.scss";
