--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -20,3 +20,7 @@ $libraryItemBorderRadius: 4px;
 $libraryItemSpacing: 30px;
 // play button related variables
 $playButtonRight: 160px;
+// filter
+$iconBlueFilter: invert(53%) sepia(79%) saturate(328%) hue-rotate(153deg) brightness(84%) contrast(94%);
+// config related variables
+$configWidth: 360px;
