--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -8,14 +8,23 @@
     background-color: #2a3038;
     color: white;
     &.show{
+        opacity: 1;
         transition: .25s;
     }
     &.hide{
+        opacity: 0;
         transform: translateX(100%);
         transition: .25s;
     }
     &__header{
         display: flex;
+        padding-bottom: 26px;
+    }
+    &__wrapper{
+        position: relative;
+        width: 100%;
+        height: calc(100% - 46px);
+        overflow: auto;
     }
     &__title{
         font-size: 18px;
@@ -32,13 +41,38 @@
           filter: $iconBlueFilter;
         }
     }
-    &__icon-browser{
-        &__icon{
-            width: 70px;
-            height: 70px;
-            img {
-                max-width: 100%;
-                max-height: 100%;
+    .react-component__form__input__label{
+        display: block;
+        padding-bottom: 2px;
+    }
+    .react-component__labeled-media-select{
+        &__wrapper{
+            grid-template-columns: repeat(auto-fit, minmax(257px, 1fr));
+            justify-items: start;
+            padding: 20px;
+        }
+    }
+    .react-component__media-select{
+        &__wrapper{
+            overflow: visible;
+            background: #20242a;
+            border-radius: 4px;
+            padding: 12px;
+            grid-template-columns: repeat(auto-fit, minmax(72px, 1fr));
+            justify-items: center;
+        }
+        &__item{
+            width: 64px;
+            height: 64px;
+            background: none;
+            box-shadow: none;
+            border-radius: 4px;
+            transition: .25s;
+            &:hover{
+                backdrop-filter: brightness(0.9);
+            }
+            &.selected{
+                border: 1px solid blue;
             }
         }
     }
