--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -33,3 +33,11 @@ body {
         box-shadow: 0px 0px 14px 8px rgba(64,148,185,0.75);
     }
 }
+.react-component__form__input{
+    input {
+        height: 40px;
+        border-radius: 4px;
+        border: none;
+        outline: none;
+    }
+}
