- Added load screen - Added export and import tour

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,4 @@
 @import "./scss/preview.scss";
 @import "./scss/context-menu.scss";
 @import "./scss/config.scss";
+@import "./scss/load-screen.scss";
