--- a/src/index.scss
+++ b/src/index.scss
@@ -10,4 +10,5 @@
 @import "./scss/preview.scss";
 @import "./scss/context-menu.scss";
 @import "./scss/config.scss";
+@import "./scss/text.scss";
 @import "./scss/load-screen.scss";
