--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -3,6 +3,7 @@
     color: white;
     font-size: 18px;
     font-weight: 600;
+    transform: translate(-50%, 0);
     &.show{
         opacity: 1;
         transition: .25s;
