--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,43 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 html,
 body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 * {
-    // outline: 1px solid white;
-    font-family: 'Italiana', serif;
-    font-family: 'Roboto', sans-serif;
+  // outline: 1px solid white;
+  font-family: "Italiana", serif;
+  font-family: "Roboto", sans-serif;
 }
-.tourable{
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(0deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0.65) 100%);
-    pointer-events: none;
-    * {
-        pointer-events: all;
-    }
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
 }
-.react-component__button{
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.tourable {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.65) 0%,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.65) 100%
+  );
+  pointer-events: none;
+  * {
+    pointer-events: all;
+  }
+}
+.react-component__button {
+  border: none;
+  outline: none;
+  box-shadow: 0px 0px 14px 0px rgba(64, 148, 185, 0.75);
+  transition: 0.25s;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0px 0px 14px 8px rgba(64, 148, 185, 0.75);
+  }
+}
+.react-component__form__input {
+  input {
+    height: 40px;
+    border-radius: 4px;
     border: none;
     outline: none;
-    box-shadow: 0px 0px 14px 0px rgba(64,148,185,0.75);
-    transition: .25s;
-    cursor: pointer;
-    &:hover{
-        box-shadow: 0px 0px 14px 8px rgba(64,148,185,0.75);
-    }
+  }
 }
-.react-component__form__input{
-    input {
-        height: 40px;
-        border-radius: 4px;
-        border: none;
-        outline: none;
-    }
+.ck-dropdown__panel_sw {
+  .ck-toolbar {
+    width: 298px !important;
+  }
 }
