--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -6,7 +6,10 @@
     height: 40vh;
     min-height: 30vh;
     max-height: 80vh;
+    border-radius: 4px;
+    padding: 0 8px 8px 8px;
     background: white;
+    overflow: auto;
     transform: translate(-50%, -50%);
     &.show{
         opacity: 1;
