--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -1,5 +1,7 @@
 .tourable__text{
     position: absolute;
+    width: 310px;
+    max-height: 80vh;
     color: white;
     font-size: 18px;
     font-weight: 600;
