- Finished Poly - Updated Observable

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,4 @@
 @import "./scss/text.scss";
 @import "./scss/load-screen.scss";
 @import "./scss/popup.scss";
+@import "./scss/notification.scss";
