--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -6,6 +6,7 @@
     font-size: 18px;
     font-weight: 600;
     transform: translate(-50%, 0);
+    pointer-events: none;
     &.show{
         opacity: 1;
         transition: .25s;
