- Added set enteringAngle to hotspots which determines where the camera looks at upon entering

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,4 @@
 @import "./scss/load-screen.scss";
 @import "./scss/popup.scss";
 @import "./scss/notification.scss";
+@import "./scss/confirm.scss";
