--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,13 @@
 * {
     box-sizing: border-box;
 }
+
+$ckeditorBorderColor: #cecece;
+.react-component__ckeditor__content{
+    border-left: 1px solid $ckeditorBorderColor;
+    border-right: 1px solid $ckeditorBorderColor;
+    border-bottom: 1px solid $ckeditorBorderColor;
+}
+.ck-editor__editable_inline {
+    min-height: 200px !important;
+}
