- Working on client GUI

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,5 @@ $ckeditorBorderColor: #cecece;
 .ck-editor__editable_inline {
     min-height: 200px !important;
 }
+
+@import "./scss/toolbar.scss"
