- Working on GridLayout

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,4 +19,5 @@ $ckeditorBorderColor: #cecece;
     overlfow: hidden;
 }
 
-@import "./scss/toolbar.scss"
+@import "./scss/toolbar.scss";
+@import "./scss/grid-layout.scss";
